syntax = "proto3";

package greet.v2;

// The greeting service definition.
service Greeter {
  rpc SayHello2 (HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
